--- a/templates/entry.html
+++ b/templates/entry.html
@@ -15,4 +15,4 @@
   <p>When you're ready, click this button:</p>
   <p><input value="Do it!" type="SUBMIT" /></p>
 </form>
-{% endblock %
+{% endblock %}
